project(gpgs_apps)

include_directories(include)

add_executable(parse_navi_data src/parse_navi_data.cpp)
target_link_libraries(parse_navi_data navi_data sparse_gp data_transforms gpgs_igl_visualizer data_structures ${PCL_LIBRARIES})

add_executable(parse_sim_data src/parse_sim_data.cpp)
target_link_libraries(parse_sim_data sparse_gp data_transforms submaps data_structures)

add_executable(visualize_pointclouds src/visualize_pointclouds.cpp)
target_link_libraries(visualize_pointclouds ${PCL_LIBRARIES})

add_executable(visualize_process src/visualize_process.cpp)
target_link_libraries(visualize_process sparse_gp rbf_kernel gaussian_noise probit_noise octave_convenience submaps ${PCL_LIBRARIES})

add_executable(register_process src/register_process.cpp)
target_link_libraries(register_process sparse_gp submaps gpgs_cost_function gpgs_visualization)

add_executable(register_process_ceres src/register_process_ceres.cpp)
#target_link_libraries(register_process_ceres rbf_kernel gaussian_noise probit_noise octave_convenience submaps ${PCL_LIBRARIES} ${OpenCV_LIBS} ${CERES_LIBRARIES})
target_link_libraries(register_process_ceres submaps gpgs_cost_function gpgs_visualization)

add_executable(slam_process_ceres src/slam_process_ceres.cpp)
target_link_libraries(slam_process_ceres submaps gpgs_cost_function gpgs_visualization gpgs_multi_visualizer gpgs_igl_visualizer data_structures)

add_executable(visualize_slam_process src/visualize_slam_process.cpp)
#target_link_libraries(visualize_slam_process submaps gpgs_cost_function gpgs_visualization gpgs_multi_visualizer gpgs_igl_visualizer)
target_link_libraries(visualize_slam_process gpgs_visualization gpgs_igl_visualizer data_structures)

# TESTS
add_executable(test_gaussian_process test/test_gaussian_process.cpp)
target_link_libraries(test_gaussian_process sparse_gp rbf_kernel gaussian_noise probit_noise octave_convenience submaps ${PCL_LIBRARIES} ${CERES_LIBRARIES})

add_executable(test_fast_derivatives test/test_fast_derivatives.cpp)
target_link_libraries(test_fast_derivatives submaps data_structures gpgs_cost_function gpgs_visualization gpgs_multi_visualizer data_transforms)

add_executable(test_parse_navi_data test/test_parse_navi_data.cpp)
target_link_libraries(test_parse_navi_data navi_data data_transforms data_structures)
